fix simple dataflow test script